--- a/public/index.html
+++ b/public/index.html
@@ -11,9 +11,9 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
    
-    <link rel="stylesheet" href="../src/signup/signup.css">
+    <!-- <link rel="stylesheet" href="../src/signup/signup.css"> -->
     <link rel="stylesheet" href="../src/dashboard/dashboard.css">
-     <link rel="stylesheet" href="../src/login/login.css">
+     <!-- <link rel="stylesheet" href="../src/login/login.css"> -->
 
 
 
